Add stats endpoint for getting tickets since a particular date (YYYY-MM-DD)
